--- a/app/src/main/res/layout/animal_icon.xml
+++ b/app/src/main/res/layout/animal_icon.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true">
+    android:clickable="true"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
         app:srcCompat="@drawable/bovinos"
@@ -13,8 +14,8 @@
         android:scaleType="fitCenter"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_height="100dp"
-        android:layout_width="100dp"
+        android:layout_height="125dp"
+        android:layout_width="125dp"
         android:contentDescription="@string/animal_icon" />
 
     <TextView
